# Searchify

./: .gitignore  .secrets.baseline  Agents.md  CONTRIBUTING.md  FRONTEND_AUDIT_REPORT.md  HANDOFF.md  HANDOFF_MARKETING_SITE.md  IMPLEMENTATION_AND_DEBT_REMOVAL_PLAN.md  LICENSE  README.md  Searchify-analysis-report.json  cube27-aeo-visibility-mvp-architecture-plan-v2.md  delete.bat  start.bat
backend/: alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/analysis/: csv_cells.py  exports.py  normalization.py  product_scoring.py  product_service.py  scoring.py  service.py
backend/app/analysis/opportunities/: __init__.py  detectors.py  exports.py  scoring.py
backend/app/analysis/site_health/: __init__.py  exports.py  page_types.py  parser.py  rules.py  scoring.py  structured_data.py
backend/app/api/: analytics.py  audits.py  auth.py  brand_suggestions.py  content.py  deps.py  executions.py  integrations.py  oauth.py  opportunities.py  products.py  projects.py  prompts.py  provider_connections.py  site_health.py  traffic.py  workspaces.py
backend/app/connectors/agent/: __init__.py  client.py
backend/app/connectors/answer_engines/: __init__.py  anthropic.py  anthropic_parser.py  contracts.py  errors.py  factory.py  gemini.py  gemini_parser.py  normalization.py  openai.py  openai_parser.py  openrouter.py  openrouter_parser.py
backend/app/connectors/discovery_models/: __init__.py  contracts.py  factory.py  mistral.py
backend/app/connectors/integrations/: __init__.py  _http.py  bing.py  ga4.py  gsc.py  oauth.py
backend/app/connectors/web_evidence/: contracts.py  fetcher.py  robots.py  sitemaps.py  url_policy.py
backend/app/core/: database.py  http_errors.py  security.py  telemetry.py
backend/app/core/config/: __init__.py  agent.py  (+16 more)
backend/app/models/: __init__.py  analysis.py  analytics.py  audit.py  brand.py  constants.py  content.py  integrations.py  opportunity.py  product.py  project.py  prompt.py  provider.py  site_health.py  traffic.py  user.py  workspace.py
backend/app/orchestration/: audit_state.py  postgres_task_queue.py  task_queue.py
backend/app/workers/: analytics_worker.py  audit_worker.py  content_worker.py  integration_dispatcher.py  integration_worker.py  site_health_worker.py
backend/scripts/: set_site_health_entitlement.py
backend/tests/: conftest.py
backend/tests/component/: analytics_helpers.py  audit_helpers.py  opportunity_helpers.py  site_health_helpers.py  test_analysis_api.py  test_analysis_http.py  test_analytics_queue.py  test_analytics_snapshot.py  test_audit_planner.py  test_audit_queue.py  test_audit_worker.py  test_auth_api.py  test_brand_profile_api.py  test_brand_suggestions_api.py  test_classify_referrals_worker.py  test_content_api.py  test_health.py  test_integration_bing.py  test_integration_derivation.py  test_integration_dispatcher.py  test_integration_ga4.py  test_integration_queue.py  test_integration_sync_enqueue.py  test_integration_worker.py  test_integrations_api.py  test_integrations_mappings_api.py  test_integrations_models.py  test_integrations_oauth_api.py  test_integrations_sync_api.py  test_llm_analytics_api.py  test_oauth_api.py  test_opportunities_api.py  test_opportunities_service.py  test_post_sync_chain.py  test_product_analysis_worker.py  test_product_visibility_api.py  test_products_api.py  test_projects_prompts_api.py  test_prompt_generation_api.py  test_provider_connections_api.py  (+15 more)
backend/tests/fixtures/: openai_responses_grounded.json  openai_responses_no_search.json
backend/tests/unit/: test_analysis_scoring.py  test_analytics_config.py  test_analytics_snapshot.py  test_answer_engine_adapters.py  test_audit_guardrails.py  test_audit_state.py  test_brand_profile.py  test_brand_suggestions.py  test_content_config.py  test_content_message_builder.py  test_content_website_context.py  test_csv_cells.py  test_discovery_models_mistral.py  test_integrations_config.py  test_integrations_oauth.py  test_oauth_config.py  test_oauth_state.py  test_opportunities_config.py  test_opportunity_detectors.py  test_opportunity_exports.py  test_opportunity_scoring.py  test_product_completeness.py  test_product_csv_import.py  test_product_schemas.py  test_product_scoring.py  test_product_shim.py  test_project_normalization.py  test_project_shim.py  test_prompt_csv_import.py  test_prompt_generation.py  test_prompt_locks.py  test_provider_base_url_validation.py  test_referral_classification.py  test_referral_sanitize.py  test_security.py  test_site_health_discovery_parser.py  test_site_health_exports.py  test_site_health_page_types.py  test_site_health_parser.py  test_site_health_rules.py  (+8 more)
(+562 files in other folders)
