[project]
name = "searchify-backend"
version = "0.1.0"
description = "Searchify AI-Visibility MVP backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.5,<2",
  "argon2-cffi>=25.1.0,<26",
  "asyncpg>=0.30.0,<1",
  "cryptography>=44.0.0,<50",
  "email-validator>=2.3.0,<3",
  "fastapi>=0.116.0,<1",
  "httpx>=0.28.1,<1",
  "joserfc>=1.6.5,<2",
  "pydantic-settings>=2.10.0,<3",
  "python-multipart>=0.0.27,<1",
  "sqlalchemy[asyncio]>=2.0.43,<3",
  "structlog>=25.4.0,<27",
  "uvicorn[standard]>=0.35.0,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2,<10",
  "pytest-asyncio>=1.1.0,<2",
  "ruff>=0.6.0,<1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
