[project]
name = "searchify-backend"
version = "0.1.0"
description = "Searchify AI-Visibility backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.5,<2",
  "argon2-cffi>=25.1.0,<26",
  "asyncpg>=0.30.0,<1",
  "cryptography>=48.0.1,<50",
  "defusedxml>=0.7.1,<1",
  "email-validator>=2.3.0,<3",
  "fastapi>=0.116.0,<1",
  "httpx>=0.28.1,<1",
  "joserfc>=1.6.8,<2",
  "lxml>=6.1.0,<7",
  "protego>=0.3.1,<1",
  "pydantic-settings>=2.10.0,<3",
  "python-multipart>=0.0.31,<1",
  "sqlalchemy[asyncio]>=2.0.43,<3",
  "structlog>=25.4.0,<27",
  "tldextract>=5.1.0,<6",
  "uvicorn[standard]>=0.35.0,<1",
]

[project.optional-dependencies]
dev = [
  "lxml-stubs>=0.5.1,<1",
  "mypy>=1.14.0,<2",
  "pytest>=9.0.3,<10",
  "pytest-asyncio>=1.1.0,<2",
  "ruff>=0.6.0,<1",
  "types-defusedxml>=0.7.0,<1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# The test schema and its engine/connection pool are built once per session
# (see tests/conftest.py). Fixtures AND tests therefore have to share ONE event
# loop for the whole run: with the default function-scoped loop the pool binds
# to the first loop it sees, and every later test fails with "attached to a
# different loop". Both knobs are required — setting only the fixture scope
# leaves tests on their own loops.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.mypy]
python_version = "3.12"
files = ["app"]
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true

[dependency-groups]
dev = [
    "asyncpg-stubs>=0.31.3",
    "lxml-stubs>=0.5.1",
    "types-defusedxml>=0.7.0.20260504",
]
